...
			<View
				style={styles.searchContainer}
				testID="token-selection-modal-content"
				accessible={false}
			>
				<Searchbar
					testID="token-search-input"
					placeholder="Search tokens"
					value={searchQuery}
					onChangeText={handleSearchQueryChange}
					style={styles.searchBar}
					inputStyle={styles.searchBarInput}
					iconColor={styles.colors.onSurfaceVariant}
...
