...
		</View>
	);

	const renderPlaceholderTrendingSection = () => (
		<View style={styles.placeholderTrendingContainer}>
			<View style={styles.placeholderTrendingHeader}>
				<Text style={styles.sectionTitle}>Trending Coins</Text>
			</View>
			<View style={styles.placeholderTrendingColumnHeader}>
				<View style={styles.placeholderTrendingLeftSection}>
					<Text style={styles.placeholderColumnHeaderText}>Token</Text>
				</View>
				<View style={styles.placeholderTrendingSparklineSection}>
...
