appId: com.nicolasmartin.dankfolio
env:
    JUP_ADDRESS: "jupyiwryjfskupiha7hker8vutaefosybkedznsdvcn"
---
- runFlow: ../common/app-setup.yaml

- assertVisible: "Trending Coins"

- tapOn:
      id: "trending-coin-card-${JUP_ADDRESS}"

- assertVisible:
      id: "coin-detail-screen"

- runFlow:
      file: ../components/coin-detail-element.yaml
      env:
          COIN_ADDRESS: "${JUP_ADDRESS}"

- assertVisible:
      id: "trade-button"
